fix overflow error

--- a/style.css
+++ b/style.css
@@ -712,7 +712,7 @@ footer .mobile {
     width: 50%;
   }
 
-  #about-me .about-content .heading {
+  #about-me .about-content .about-block .heading {
     font-weight: 400;
     font-size: 72px;
     line-height: 82px;
